--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -11,6 +11,7 @@ VM_DISK_GB: 100
 
 SERVICE_DOMAINS: 
   - kubernetes-dashboard.{{DOMAIN}}
+  - longhorn.{{DOMAIN}}
   - prometheus.{{DOMAIN}}
   # - grafana.{{DOMAIN}}
   
