--- a/playbooks/provision.yml
+++ b/playbooks/provision.yml
@@ -1,5 +1,5 @@
 - import_playbook: provision-vms.yml
 - import_playbook: site.yml
-- import_playbook: traefic-config.yml
+- import_playbook: traefik.yml
 - import_playbook: kube-config.yml
 - import_playbook: dashboard.yml
