--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -11,6 +11,7 @@ VM_DISK_GB: 100
 
 SERVICE_DOMAINS: 
   - kubernetes-dashboard.{{DOMAIN}}
+  - reaefik.{{DOMAIN}}
   - longhorn.{{DOMAIN}}
   - prometheus.{{DOMAIN}}
   - alertmanager.{{DOMAIN}}
@@ -30,7 +31,7 @@ SERVICE_DOMAINS:
   - broker-0.{{DOMAIN}}
   - broker-1.{{DOMAIN}}
   - broker-2.{{DOMAIN}}
-  # - imdg.{{DOMAIN}}
-  # - imdg-rest.{{DOMAIN}}
-  # - imdg-management.{{DOMAIN}}
+  - imdg.{{DOMAIN}}
+  - imdg-rest.{{DOMAIN}}
+  - imdg-management.{{DOMAIN}}
   # - imdg-metrics.{{DOMAIN}}
