--- a/playbooks/kube-prom-stack.yml
+++ b/playbooks/kube-prom-stack.yml
@@ -4,6 +4,16 @@
   gather_facts: false
   become: false
   tasks:
+    - name: Create monitoring namespace
+      kubernetes.core.k8s:
+        state: present
+        definition:
+          kind: Namespace
+          apiVersion: v1
+          metadata:
+            name: monitoring
+            labels:
+              metrics: enabled
     - name: Add Prometheus helm repository
       kubernetes.core.helm_repository:
         name: prometheus-community
@@ -14,6 +24,5 @@
         chart_ref: prometheus-community/kube-prometheus-stack
         release_namespace: monitoring
         chart_version: 68.2.1
-        create_namespace: true
         values_files:
           - resources/kube-prom-stack/values.yaml
