--- a/playbooks/resources/kafka/IngressRouteTCP.yml
+++ b/playbooks/resources/kafka/IngressRouteTCP.yml
@@ -2,67 +2,28 @@
 apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRouteTCP
 metadata:
-  name: kafka-bootstrap
+  name: kafka-ingress
   namespace: kafka
 spec:
   entryPoints:
-    - kafka-bootstrap
+    - websecure
   routes:
-    - match: HostSNI(`*`)
+    - match: HostSNI(`kafka-bootstrap.local`)
       services:
         - name: kafka-cluster-kafka-external-bootstrap
-          port: 9094
----
-apiVersion: traefik.containo.us/v1alpha1
-kind: IngressRouteTCP
-metadata:
-  name: broker-0
-  namespace: kafka
-spec:
-  entryPoints:
-    - broker-0
-  routes:
-    - match: HostSNI(`*`)
+          port: 9094  
+    - match: HostSNI(`broker-0.local`)
       services:
         - name: kafka-cluster-node-pool-0
           port: 9094
----
-apiVersion: traefik.containo.us/v1alpha1
-kind: IngressRouteTCP
-metadata:
-  name: broker-1
-  namespace: kafka
-spec:
-  entryPoints:
-    - broker-1
-  routes:
-    - match: HostSNI(`*`)
+    - match: HostSNI(`broker-1.local`)
       services:
         - name: kafka-cluster-node-pool-1
           port: 9094
----
-apiVersion: traefik.containo.us/v1alpha1
-kind: IngressRouteTCP
-metadata:
-  name: broker-2
-  namespace: kafka
-spec:
-  entryPoints:
-    - broker-2
-  routes:
-    - match: HostSNI(`*`)
+    - match: HostSNI(`broker-2.local`)
       services:
-        - name: kafka-cluster-node-pool-2
+        - name: kafka-cluster-node-pool-0
           port: 9094
-
-    # - match: HostSNI(`*`)
-    #   services:
-    #     - name: kafka-cluster-node-pool-1
-    #       port: 9942
-    # - match: HostSNI(`*`)
-    #   services:
-    #     - name: kafka-cluster-node-pool-2
-    #       port: 9943
-  #tls:
-  #  secretName: kafka-tls
-  #  passthrough: true
+  tls:
+    secretName: kafka-tls
+    passthrough: true
