--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -16,6 +16,7 @@ SERVICE_DOMAINS:
   - prometheus.{{DOMAIN}}
   - alertmanager.{{DOMAIN}}
   - grafana.{{DOMAIN}}
+  - kubeshark.{{DOMAIN}}
   
   # - portainer.{{DOMAIN}}
   # - graylog.{{DOMAIN}}
