--- a/playbooks/kafka.yml
+++ b/playbooks/kafka.yml
@@ -27,6 +27,12 @@
         namespace: kafka
         state: present
 
+    - name: Create kafka certificate
+      kubernetes.core.k8s:
+        src: resources/kafka/Certificate.yml
+        namespace: kafka
+        state: present
+
     - name: Deploy Kafka cluster
       kubernetes.core.k8s:
         src: resources/kafka/kafka.yml
@@ -37,9 +43,32 @@
 
     - name: Deploy Kafka Service Monitor
       kubernetes.core.k8s:
-        src: resources/kafka/kafka-PodMonitor.yaml
+        src: resources/kafka/kafka-PodMonitor.yml
         namespace: kafka
         state: present
+
+    - name: Create Kafka ingress 
+      kubernetes.core.k8s:
+        src: resources/kafka/IngressRouteTcp.yml
+        namespace: kafka
+        state: present
+
+    - name: Get Kafka TLS CA certificate
+      kubernetes.core.k8s_info:
+        kind: Secret
+        name: kafka-tls
+        namespace: kafka
+      register: cacertsecret
+
+    - name: Import Kafka TLS CA certificate to client truststore.jks
+      community.general.java_cert:
+        cert_content: "{{ cacertsecret.resources[0].data['ca.crt'] | b64decode}}"
+        keystore_path: resources/kafka/certs/truststore.jks
+        keystore_pass: 12345678
+        keystore_create: true
+        state: present
+        cert_alias: kafka-cluster-ca
+        trust_cacert: true
 
     - name: Get Grafana admin user
       kubernetes.core.k8s_info:
