--- a/playbooks/resources/kafka/kafka.yml
+++ b/playbooks/resources/kafka/kafka.yml
@@ -39,10 +39,10 @@ spec:
         port: 9092
         type: internal
         tls: false
-      # - name: tls
-      #   port: 9093
-      #   type: internal
-      #   tls: true
+      - name: tls
+        port: 9093
+        type: internal
+        tls: true
       - name: external
         port: 9094
         type: cluster-ip
