some work on the coherence

--- a/playbooks/coherence.yml
+++ b/playbooks/coherence.yml
@@ -47,6 +47,11 @@
         src: resources/coherence/IngressRouteTCP.yml
         state: present
 
+    - name: Deploy coherence service account
+      kubernetes.core.k8s:
+        src: resources/coherence/ServiceAccount.yml
+        state: present
+
     - name: Get Grafana admin user
       kubernetes.core.k8s_info:
         kind: Secret
@@ -78,33 +83,3 @@
         path: "{{item}}"
       with_items: "{{ files.files |  map(attribute='path') }}"
       ignore_errors: true
-
-    # - name: Add Coherence Extned TCP port to nginx-ingress-tcp-microk8s-conf
-    #   kubernetes.core.k8s:
-    #     state: patched
-    #     definition:
-    #       apiVersion: v1
-    #       kind: ConfigMap
-    #       metadata:
-    #         name: nginx-ingress-tcp-microk8s-conf
-    #         namespace: ingress
-    #       data:
-    #         '9090': 'coherence/imdg-extend-tcp:9090'
-
-    # - name: "Patch nginx-ingress-microk8s-controller DaemonSet"
-    #   kubernetes.core.k8s:
-    #     state: patched
-    #     kind: DaemonSet
-    #     name: nginx-ingress-microk8s-controller
-    #     namespace: ingress
-    #     definition:
-    #       spec:
-    #         template:
-    #           spec:
-    #             containers:
-    #               - name: nginx-ingress-microk8s
-    #                 ports:
-    #                 - name: extend-tcp
-    #                   hostPort: 9090
-    #                   containerPort: 9090
-    #                   protocol: TCP
