--- a/playbooks/resources/coherence/imdg.yml
+++ b/playbooks/resources/coherence/imdg.yml
@@ -7,16 +7,22 @@ spec:
   replicas: 3
   cluster: imdg
   #image: ghcr.io/oracle/coherence-ce:24.09
-  image: repository.azdio-tv.com/com.azdio.k8s/coherence-cluster-node:1.0.0-SNAPSHOT-amd64
+  image: repository.azdio-tv.com/com.egt.digital.plafrom.services/coherence-cluster-node:24.09.2.1-SNAPSHOT-amd64
   imagePullPolicy: Always
+  application:
+    main: com.egt.digital.platform.services.coherence.CoherenceClusterNodeApplication
   imagePullSecrets:  
-    - name: docker-registry-credentials
+   - name: docker-registry-credentials
   jvm:
     args:
       - "-XX:-UseG1GC"
       - "-XX:+UseZGC"
       - "-XX:ZUncommitDelay=30"
       - "-XX:+ZGenerational"
+      - "-Djava.net.preferIPv4Stack=true"
+      - "--add-opens java.base/java.io=ALL-UNNAMED"
+      - "--add-opens java.base/java.lang=ALL-UNNAMED"
+      - "-Dserver.port=8888"
     memory:
       initialRAMPercentage: 10
       minRAMPercentage: 5
@@ -59,9 +65,6 @@ spec:
     - name: metrics
       serviceMonitor:
         enabled: true
-        # labels: 
-        #   team: observability
-        #   release: kube-prom-stack
   initResources:           
     requests:
       memory: "64Mi"
