--- a/playbooks/resources/kube-prom-stack/values.yaml
+++ b/playbooks/resources/kube-prom-stack/values.yaml
@@ -2224,7 +2224,7 @@ kube-state-metrics:
 ## Deploy node exporter as a daemonset to all nodes
 ##
 nodeExporter:
-  enabled: true
+  enabled: false
   operatingSystems:
     linux:
       enabled: true
