--- a/playbooks/resources/coherence/imdg.yml
+++ b/playbooks/resources/coherence/imdg.yml
@@ -7,7 +7,7 @@ spec:
   replicas: 3
   cluster: imdg
   #image: ghcr.io/oracle/coherence-ce:24.09
-  image: repository.azdio-tv.com/com.egt.digital.plafrom.services/coherence-cluster-node:24.09.2.1-SNAPSHOT-amd64
+  image: repository.azdio-tv.com/com.egt.digital.plafrom.services/coherence-cluster-node:24.09.2.0-SNAPSHOT
   imagePullPolicy: Always
   application:
     main: com.egt.digital.platform.services.coherence.CoherenceClusterNodeApplication
