--- a/playbooks/longhorn.yml
+++ b/playbooks/longhorn.yml
@@ -1,3 +1,22 @@
+- name: Patch /etc/multipath.conf
+  hosts: k3s_cluster
+  gather_facts: false
+  become: true
+  tasks:
+    - name: Patch /etc/multipath.conf
+      ansible.builtin.blockinfile:
+        path: /etc/multipath.conf
+        append_newline: true
+        prepend_newline: true
+        block: |
+          blacklist {
+            devnode "^sd[a-z0-9]+"
+          }
+    - name: Restart multipath api
+      ansible.builtin.systemd_service:
+        name: multipathd
+        state: reloaded
+    
 - name: Provision Longhorn block storage
   hosts: localhost
   connection: local
