--- a/playbooks/coherence.yml
+++ b/playbooks/coherence.yml
@@ -4,82 +4,85 @@
   gather_facts: false
   become: false
   tasks:
-    - name: Create Coherence namespace
-      kubernetes.core.k8s:
-        state: present
-        definition:
-          kind: Namespace
-          apiVersion: v1
-          metadata:
-            name: coherence
-            labels:
-              metrics: enabled
+    # - name: Create Coherence namespace
+    #   kubernetes.core.k8s:
+    #     state: present
+    #     definition:
+    #       kind: Namespace
+    #       apiVersion: v1
+    #       metadata:
+    #         name: coherence
+    #         labels:
+    #           metrics: enabled
     
-    - name: Install Coherence Operator
-      kubernetes.core.k8s:
-        src: https://github.com/oracle/coherence-operator/releases/download/v3.4.0/coherence-operator.yaml
-        state: present
+    # - name: Install Coherence Operator
+    #   kubernetes.core.k8s:
+    #     src: https://github.com/oracle/coherence-operator/releases/download/v3.4.0/coherence-operator.yaml
+    #     state: present
 
-    - name: Wait for operator deployment avaiablity
-      kubernetes.core.k8s:
-        namespace: coherence
-        name: coherence-operator-controller-manager
-        kind: Deployment
-        wait: yes
-        wait_sleep: 2
-        wait_timeout: 100
-        wait_condition:
-          type: Available
-          status: true
+    # - name: Wait for operator deployment avaiablity
+    #   kubernetes.core.k8s:
+    #     namespace: coherence
+    #     name: coherence-operator-controller-manager
+    #     kind: Deployment
+    #     wait: yes
+    #     wait_sleep: 2
+    #     wait_timeout: 100
+    #     wait_condition:
+    #       type: Available
+    #       status: true
+
+    - name: Create coherence config map
+      ansible.builtin.command: kubectl -n coherence create configmap coherence-config --from-file resources/coherence/config
 
     - name: Deploy coherence cluster
       kubernetes.core.k8s:
         src: resources/coherence/imdg.yml
         state: present
 
-    - name: Deploy coherence service account
-      kubernetes.core.k8s:
-        src: resources/coherence/ServiceAccount.yml
-        state: present
+    # - name: Deploy coherence service account
+    #   kubernetes.core.k8s:
+    #     src: resources/coherence/ServiceAccount.yml
+    #     state: present
 
-    - name: Deploy coherence REST and Management ingress
-      kubernetes.core.k8s:
-        src: resources/coherence/Ingress.yml
-        state: present
+    # - name: Deploy coherence REST and Management ingress
+    #   kubernetes.core.k8s:
+    #     src: resources/coherence/Ingress.yml
+    #     state: present
 
-    - name: Deploy coherence extend Ingress Route TCP
-      kubernetes.core.k8s:
-        src: resources/coherence/IngressRouteTCP.yml
-        state: present
+    # - name: Deploy coherence extend Ingress Route TCP
+    #   kubernetes.core.k8s:
+    #     src: resources/coherence/IngressRouteTCP.yml
+    #     state: present
 
-    - name: Get Grafana admin user
-      kubernetes.core.k8s_info:
-        kind: Secret
-        name: kube-prometheus-stack-grafana
-        namespace: monitoring
-      register: grafana
+    # - name: Get Grafana admin user
+    #   kubernetes.core.k8s_info:
+    #     kind: Secret
+    #     name: kube-prometheus-stack-grafana
+    #     namespace: monitoring
+    #   register: grafana
 
-    - name: Find all Coherence dashboards
-      ansible.builtin.find:
-        paths: resources/coherence/grafana
-      register: files
+    # - name: Find all Coherence dashboards
+    #   ansible.builtin.find:
+    #     paths: resources/coherence/grafana
+    #   register: files
 
-    - name: Create Coherence Grafana folder
-      community.grafana.grafana_folder:
-        url: http://grafana.local
-        grafana_user: "{{ grafana.resources[0].data['admin-user'] |  b64decode }}"
-        grafana_password: "{{ grafana.resources[0].data['admin-password'] | b64decode }}"
-        title: "Coherence"
-        state: present
+    # - name: Create Coherence Grafana folder
+    #   community.grafana.grafana_folder:
+    #     url: http://grafana.local
+    #     grafana_user: "{{ grafana.resources[0].data['admin-user'] |  b64decode }}"
+    #     grafana_password: "{{ grafana.resources[0].data['admin-password'] | b64decode }}"
+    #     title: "Coherence"
+    #     state: present
 
-    - name: Import Coherence Grafana dashboards
-      community.grafana.grafana_dashboard:
-        grafana_url: http://grafana.local
-        grafana_user: "{{ grafana.resources[0].data['admin-user'] |  b64decode }}"
-        grafana_password: "{{ grafana.resources[0].data['admin-password'] | b64decode }}"
-        folder: "Coherence"
-        state: present
-        overwrite: false
-        path: "{{item}}"
-      with_items: "{{ files.files |  map(attribute='path') }}"
-      ignore_errors: true
+    # - name: Import Coherence Grafana dashboards
+    #   community.grafana.grafana_dashboard:
+    #     grafana_url: http://grafana.local
+    #     grafana_user: "{{ grafana.resources[0].data['admin-user'] |  b64decode }}"
+    #     grafana_password: "{{ grafana.resources[0].data['admin-password'] | b64decode }}"
+    #     folder: "Coherence"
+    #     state: present
+    #     overwrite: false
+    #     path: "{{item}}"
+    #   with_items: "{{ files.files |  map(attribute='path') }}"
+    #   ignore_errors: true
