--- a/playbooks/resources/kube-prom-stack/values.yaml
+++ b/playbooks/resources/kube-prom-stack/values.yaml
@@ -3895,7 +3895,7 @@ prometheus:
 
     ## Maximum size of metrics
     ##
-    retentionSize: ""
+    retentionSize: "20GB"
 
     ## Allow out-of-order/out-of-bounds samples ingested into Prometheus for a specified duration
     ## See https://prometheus.io/docs/prometheus/latest/configuration/configuration/#tsdb
@@ -4003,7 +4003,7 @@ prometheus:
           accessModes: ["ReadWriteOnce"]
           resources:
             requests:
-              storage: 5Gi
+              storage: 20Gi
           # selector: {}
 
     ## Using tmpfs volume
