--- a/playbooks/coherence.yml
+++ b/playbooks/coherence.yml
@@ -33,22 +33,22 @@
           status: true
 
     - name: Create coherence config map
-      ansible.builtin.command: kubectl -n coherence create configmap coherence-config --from-file resources/coherence/config
+     ansible.builtin.command: kubectl -n coherence create configmap coherence-config --from-file resources/coherence/config
 
     - name: Deploy coherence cluster
       kubernetes.core.k8s:
         src: resources/coherence/imdg.yml
         state: present
 
-    # - name: Deploy coherence service account
-    #   kubernetes.core.k8s:
-    #     src: resources/coherence/ServiceAccount.yml
-    #     state: present
+    - name: Deploy coherence service account
+      kubernetes.core.k8s:
+        src: resources/coherence/ServiceAccount.yml
+        state: present
 
-    # - name: Deploy coherence REST and Management ingress
-    #   kubernetes.core.k8s:
-    #     src: resources/coherence/Ingress.yml
-    #     state: present
+    - name: Deploy coherence REST and Management ingress
+      kubernetes.core.k8s:
+        src: resources/coherence/Ingress.yml
+        state: present
 
     - name: Deploy coherence extend Ingress Route TCP
       kubernetes.core.k8s:
