--- a/playbooks/coherence.yml
+++ b/playbooks/coherence.yml
@@ -49,54 +49,54 @@
 #    - name: Create coherence config map
 #     ansible.builtin.command: kubectl -n coherence create configmap coherence-config --from-file resources/coherence/config
 
-    - name: Deploy coherence cluster
-      kubernetes.core.k8s:
-        src: resources/coherence/imdg.yml
-        state: present
-
-    - name: Deploy coherence service account
-      kubernetes.core.k8s:
-        src: resources/coherence/ServiceAccount.yml
-        state: present
-
-    - name: Deploy coherence REST and Management ingress
-      kubernetes.core.k8s:
-        src: resources/coherence/Ingress.yml
-        state: present
-
-    - name: Deploy coherence extend Ingress Route TCP
-      kubernetes.core.k8s:
-        src: resources/coherence/IngressRouteTCP.yml
-        state: present
-
-    # - name: Get Grafana admin user
-    #   kubernetes.core.k8s_info:
-    #     kind: Secret
-    #     name: kube-prometheus-stack-grafana
-    #     namespace: monitoring
-    #   register: grafana
-
-    # - name: Find all Coherence dashboards
-    #   ansible.builtin.find:
-    #     paths: resources/coherence/grafana
-    #   register: files
-
-    # - name: Create Coherence Grafana folder
-    #   community.grafana.grafana_folder:
-    #     url: http://grafana.local
-    #     grafana_user: "{{ grafana.resources[0].data['admin-user'] |  b64decode }}"
-    #     grafana_password: "{{ grafana.resources[0].data['admin-password'] | b64decode }}"
-    #     title: "Coherence"
+    # - name: Deploy coherence cluster
+    #   kubernetes.core.k8s:
+    #     src: resources/coherence/imdg.yml
     #     state: present
 
-    # - name: Import Coherence Grafana dashboards
-    #   community.grafana.grafana_dashboard:
-    #     grafana_url: http://grafana.local
-    #     grafana_user: "{{ grafana.resources[0].data['admin-user'] |  b64decode }}"
-    #     grafana_password: "{{ grafana.resources[0].data['admin-password'] | b64decode }}"
-    #     folder: "Coherence"
+    # - name: Deploy coherence service account
+    #   kubernetes.core.k8s:
+    #     src: resources/coherence/ServiceAccount.yml
     #     state: present
-    #     overwrite: false
-    #     path: "{{item}}"
-    #   with_items: "{{ files.files |  map(attribute='path') }}"
-    #   ignore_errors: true
+
+    # - name: Deploy coherence REST and Management ingress
+    #   kubernetes.core.k8s:
+    #     src: resources/coherence/Ingress.yml
+    #     state: present
+
+    # - name: Deploy coherence extend Ingress Route TCP
+    #   kubernetes.core.k8s:
+    #     src: resources/coherence/IngressRouteTCP.yml
+    #     state: present
+
+    - name: Get Grafana admin user
+      kubernetes.core.k8s_info:
+        kind: Secret
+        name: kube-prometheus-stack-grafana
+        namespace: monitoring
+      register: grafana
+
+    - name: Find all Coherence dashboards
+      ansible.builtin.find:
+        paths: resources/coherence/grafana
+      register: files
+
+    - name: Create Coherence Grafana folder
+      community.grafana.grafana_folder:
+        url: http://grafana.local
+        grafana_user: "{{ grafana.resources[0].data['admin-user'] |  b64decode }}"
+        grafana_password: "{{ grafana.resources[0].data['admin-password'] | b64decode }}"
+        title: "Coherence"
+        state: present
+
+    - name: Import Coherence Grafana dashboards
+      community.grafana.grafana_dashboard:
+        grafana_url: http://grafana.local
+        grafana_user: "{{ grafana.resources[0].data['admin-user'] |  b64decode }}"
+        grafana_password: "{{ grafana.resources[0].data['admin-password'] | b64decode }}"
+        folder: "Coherence"
+        state: present
+        overwrite: false
+        path: "{{item}}"
+      with_items: "{{ files.files |  map(attribute='path') }}"
+      ignore_errors: true
