--- a/playbooks/resources/elasticsearch/values.yml
+++ b/playbooks/resources/elasticsearch/values.yml
@@ -94,8 +94,8 @@ resources:
     cpu: "1000m"
     memory: "2Gi"
   limits:
-    cpu: "1000m"
-    memory: "2Gi"
+    cpu: "6"
+    memory: "8Gi"
 
 initResources: {}
 # limits:
